[gd_scene load_steps=15 format=3 uid="uid://bxtmdxjvrt7vj"]

[ext_resource type="Texture2D" uid="uid://bf785spu8u2a3" path="res://assets/button_menu.png" id="1_cyga3"]
[ext_resource type="Texture2D" uid="uid://doys422c4uf8e" path="res://assets/timer.png" id="2_2fvcq"]
[ext_resource type="Script" path="res://menu.gd" id="2_dtvwv"]
[ext_resource type="FontFile" uid="uid://dp6yuo1b3ghc2" path="res://font/OpenSans-ExtraBoldItalic.ttf" id="4_sgqca"]
[ext_resource type="Texture2D" uid="uid://8oexgdnq4anx" path="res://assets/stage_title.png" id="6_dhwse"]
[ext_resource type="Script" path="res://stage.gd" id="6_uhbh8"]
[ext_resource type="Script" path="res://Timer.gd" id="8_6buki"]
[ext_resource type="FontFile" uid="uid://b04mewigrlxkl" path="res://font/OpenSans-ExtraBold.ttf" id="9_bs73s"]
[ext_resource type="AudioStream" uid="uid://bhm0tb5gv0twa" path="res://audio/win.wav" id="9_oiqlg"]
[ext_resource type="AudioStream" uid="uid://buxk3fnnikty0" path="res://audio/loser.wav" id="10_asa2j"]
[ext_resource type="AudioStream" uid="uid://dayihv64gk6d7" path="res://audio/click.wav" id="12_83cf3"]
[ext_resource type="AudioStream" uid="uid://mvecijvr27qx" path="res://audio/menuSelect.wav" id="13_pndv2"]

[sub_resource type="LabelSettings" id="LabelSettings_1wqeq"]
font = ExtResource("4_sgqca")
font_size = 100
font_color = Color(0.447059, 0.584314, 0.6, 1)

[sub_resource type="LabelSettings" id="LabelSettings_bh4rc"]
font = ExtResource("9_bs73s")
font_size = 32

[node name="interface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="menu" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = 25.0
offset_right = 236.0
offset_bottom = 96.0
texture_normal = ExtResource("1_cyga3")
script = ExtResource("2_dtvwv")

[node name="timer" type="TextureButton" parent="."]
layout_mode = 1
offset_left = 1370.0
offset_top = 25.0
offset_right = 1574.0
offset_bottom = 97.0
texture_normal = ExtResource("2_2fvcq")

[node name="stage" type="Label" parent="."]
layout_mode = 0
offset_left = 730.0
offset_top = 45.0
offset_right = 1048.0
offset_bottom = 185.0
text = "FASE 1"
label_settings = SubResource("LabelSettings_1wqeq")
script = ExtResource("6_uhbh8")

[node name="rush" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 598.0
offset_top = 91.0
offset_right = 716.0
offset_bottom = 152.0
texture = ExtResource("6_dhwse")

[node name="Timer" type="Timer" parent="."]
script = ExtResource("8_6buki")

[node name="winAudio" type="AudioStreamPlayer" parent="Timer"]
stream = ExtResource("9_oiqlg")

[node name="defeatAudio" type="AudioStreamPlayer" parent="Timer"]
stream = ExtResource("10_asa2j")

[node name="stopwatch" type="Label" parent="."]
layout_mode = 0
offset_left = 1449.0
offset_top = 37.0
offset_right = 1534.0
offset_bottom = 85.0
text = "00:00"
label_settings = SubResource("LabelSettings_bh4rc")

[node name="clickAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_83cf3")

[node name="selectAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_pndv2")

[connection signal="mouse_entered" from="menu" to="menu" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="menu" to="menu" method="_on_mouse_exited"]
[connection signal="pressed" from="menu" to="menu" method="_on_pressed"]
[connection signal="timeout" from="Timer" to="Timer" method="_on_timeout"]
